Fix overflow

--- a/website/main.css
+++ b/website/main.css
@@ -75,6 +75,7 @@ h1 {
   height: 80vh;
   display: inline-block;
   border: 1px solid #ccc;
+  overflow: hidden;
 }
 
 #info-panel {
@@ -87,6 +88,7 @@ h1 {
   overflow-y: auto;
   padding: 10px;
   border: 1px solid #ccc;
+  overflow: hidden;
 }
 
 #applications-chart {
@@ -94,7 +96,7 @@ h1 {
 }
 
 /* Ipad and smaller */
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
   #map {
     width: 100%;
   }
